[package]
name = "np"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
once_cell = "1.18.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
skim = "0.10.4"
xshell = "0.2.3"
